@startuml

title __ACTIVITIES's Class Diagram__\n

  namespace com.annushkaproject.programmerscalculator {
    namespace activities {
      class com.annushkaproject.programmerscalculator.activities.HistoryActivity {
          ~ historyResults : ArrayList<String>
          - arrayAdapter : ArrayAdapter
          - historyListView : ListView
          + onOptionsItemSelected()
          # onCreate()
          - deleteItem()
          - getResults()
      }
    }
  }
  

  namespace com.annushkaproject.programmerscalculator {
    namespace activities {
      class com.annushkaproject.programmerscalculator.activities.MainActivity {
          + onBackPressed()
          + onNavigationItemSelected()
          # onCreate()
      }
    }
  }
  

  com.annushkaproject.programmerscalculator.activities.HistoryActivity -up-|> android.support.v7.app.AppCompatActivity
  com.annushkaproject.programmerscalculator.activities.MainActivity .up.|> android.support.design.widget.NavigationView.OnNavigationItemSelectedListener
  com.annushkaproject.programmerscalculator.activities.MainActivity -up-|> android.support.v7.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
